Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -54,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "travel_month = None"
+    "travel_month = None\n"
    ]
   },
   {
@@ -71,9 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "travel_month # \"January\""
