--- a/index.ipynb
+++ b/index.ipynb
@@ -54,12 +54,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'January'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "travel_month = None\n",
-    "travel_month = \"January\""
+    "travel_month = \"January\"\n",
+    "travel_month"
    ]
   },
   {
